--- a/site/week_2_solution/css/styles.css
+++ b/site/week_2_solution/css/styles.css
@@ -45,8 +45,10 @@ p {
 }
 
 .row > div {
-    padding-top: 2%;
-    padding-bottom: 2%;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-right: 5px;
+    padding-left: 5px;
 }
 
 section > div {
@@ -89,6 +91,11 @@ section > div {
         width: 100%;
     }
 
+    .col-md-6 > .row > div {
+        padding-right: 0px;
+        padding-left: 0px;
+    }
+    
     .col-md-12 > section {
         width: 95%;
     }
